added Google OAuth

--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
   "author": "Mayur Mule <mayur17111996@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7"
   }
 }
