--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mern-stack-app-memories-server",
+  "name": "memories-server",
   "version": "1.0.0",
   "description": "",
-  "author": "Mayur Mule <mayur17111996@gmail.com>",
+  "author": "blueberry",
   "license": "ISC",
   "main": "index.js",
   "type": "module",
